--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 						<p> Szukaj w Małopolsce </p>
 					</div>
 					<form class='question'>
-						<input type="text" placeholder="Wpisz odpowiedź" data-answers='["grzesiek","szwagier"]'>
+						<input type="text" placeholder="Wpisz odpowiedź" 
+							data-answers='["grzesiek","szwagier"]'>
 						<input type="submit" value="Sprawdź!">
 					</form>
 
@@ -37,6 +38,81 @@
 						<img class='figure' src='images/biblioteczka2.jpg'></img>
 					</div>
 				</div>
+
+				<div id='zausznik'>
+					<h1 class="feature-title">Co najbardziej lubią robić koty?</h2>
+					<div class='hint'>
+						<a> Podpowiedź </a>
+						<p> Czynność na 'L', bezokolicznik. </p>
+					</div>
+					<form class='question'>
+						<input type="text" placeholder="Wpisz odpowiedź" data-answers='["leżeć"]'>
+						<input type="submit" value="Sprawdź!">
+					</form>
+
+					<div class='result'>
+						Jest pokój, gdzie nikt nie wchodzi. <br />
+						Jest lampa z depresyjnym światłem. <br />
+						Zbierz odwagę, idź w stronę światła <br />
+						a znajdziesz koty.
+					</div>
+				</div>
+
+				<div id='podwlosnik'>
+					<h1 class="feature-title">Zagadka</h2>
+					<div class='hint'>
+						<a> Podpowiedź </a>
+						<p> </p>
+					</div>
+					<form class='question'>
+						<input type="text" placeholder="Wpisz odpowiedź" data-answers='["a"]'>
+						<input type="submit" value="Sprawdź!">
+					</form>
+
+					<div class='result'>
+						W tym tajemniczym choć widocznym miejscu kryją się koty:
+						<img class='figure' src='images/przyprawy1.jpg'></img>
+					</div>
+				</div>
+
+				<div id='podusznik'>
+					<h1 class="feature-title">Skąd pochodzą podługowate koty?</h2>
+					<div class='hint'>
+						<a> Żółte na niebieskim. </a>
+						<p> </p>
+					</div>
+					<form class='question'>
+						<input type="text" placeholder="Wpisz odpowiedź" 
+							data-answers='["ikea", "z ikei", "ikei"]'>
+						<input type="submit" value="Sprawdź!">
+					</form>
+
+					<div class='result'>
+						Zapach niemły, sztachnąć się można <br />
+						Co najgorsze poza domem <br />
+						Nie otwieraj drzwi, celuj wysoko <br />
+						Niech jedzie, niech sunie <br />
+					</div>
+				</div>
+
+				<div id='badyl'>
+					<h1 class="feature-title">Wpisz hasło, które przyniosły Ci koty</h2>
+					<div class='hint'>
+						<a> Kolejność nie jest chronologiczna </a>
+						<p> </p>
+					</div>
+					<form class='question'>
+						<input type="text" placeholder="Wpisz odpowiedź" 
+							data-answers='["gato"]'>
+						<input type="submit" value="Sprawdź!">
+					</form>
+
+					<div class='result'>
+						A tam czeka ostatnia część prezentu:
+						<img class='figure' src='images/barek.jpg'></img>
+					</div>
+				</div>
+
 			</div>
 
 		</main>
