--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<body>
 		<main class="main-content">
 			<div class="container">
-				<div id='poplecznik'>
+				<div class='step' id='poplecznik'>
 					<h1 class="feature-title">Kto nie lubi kotów?</h2>
 					<div class='hint'>
 						<a> Podpowiedź </a>
@@ -39,7 +39,7 @@
 					</div>
 				</div>
 
-				<div id='zausznik'>
+				<div class='step' id='zausznik'>
 					<h1 class="feature-title">Co najbardziej lubią robić koty?</h2>
 					<div class='hint'>
 						<a> Podpowiedź </a>
@@ -58,8 +58,8 @@
 					</div>
 				</div>
 
-				<div id='podwlosnik'>
-					<h1 class="feature-title">Zagadka</h2>
+				<div  class='step' id='podwlosnik'>
+					<h1 class="feature-title"></h2>
 					<div class='hint'>
 						<a> Podpowiedź </a>
 						<p> </p>
@@ -75,8 +75,8 @@
 					</div>
 				</div>
 
-				<div id='podusznik'>
-					<h1 class="feature-title">Skąd pochodzą podługowate koty?</h2>
+				<div  class='step' id='podusznik'>
+					<h1 class="feature-title">Skąd pochodzą nasze podługowate koty?</h2>
 					<div class='hint'>
 						<a> Żółte na niebieskim. </a>
 						<p> </p>
@@ -95,7 +95,7 @@
 					</div>
 				</div>
 
-				<div id='badyl'>
+				<div  class='step' id='badyl'>
 					<h1 class="feature-title">Wpisz hasło, które przyniosły Ci koty</h2>
 					<div class='hint'>
 						<a> Kolejność nie jest chronologiczna </a>
