--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<main class="main-content">
 			<div class="container">
 				<div class='step' id='poplecznik'>
-					<h1 class="feature-title">Kto nie lubi kotów?</h2>
+					<h1 class="feature-title">Kto nie lubi kotów?</h1>
 					<div class='hint'>
 						<a> Podpowiedź </a>
 						<p> Szukaj w Małopolsce </p>
@@ -40,7 +40,7 @@
 				</div>
 
 				<div class='step' id='zausznik'>
-					<h1 class="feature-title">Co najbardziej lubią robić koty?</h2>
+					<h1 class="feature-title">Co najbardziej lubią robić koty?</h1>
 					<div class='hint'>
 						<a> Podpowiedź </a>
 						<p> Czynność na 'L', bezokolicznik. </p>
@@ -59,13 +59,14 @@
 				</div>
 
 				<div  class='step' id='podwlosnik'>
-					<h1 class="feature-title"></h2>
+					<h1 class="feature-title">Kto mówił: "Stryju, narysuj mi kotka"</h1>
 					<div class='hint'>
 						<a> Podpowiedź </a>
-						<p> </p>
+						<p> Hmm, co tu podpowiadać? Mała i dużo gada. </p>
 					</div>
 					<form class='question'>
-						<input type="text" placeholder="Wpisz odpowiedź" data-answers='["a"]'>
+						<input type="text" placeholder="Wpisz odpowiedź" 
+						data-answers='["anetka", "aneta", "niut", "niuta", "niutka"]'>
 						<input type="submit" value="Sprawdź!">
 					</form>
 
@@ -76,10 +77,10 @@
 				</div>
 
 				<div  class='step' id='podusznik'>
-					<h1 class="feature-title">Skąd pochodzą nasze podługowate koty?</h2>
+					<h1 class="feature-title">Skąd pochodzą nasze podługowate koty?</h1>
 					<div class='hint'>
-						<a> Żółte na niebieskim. </a>
-						<p> </p>
+						<a> Podpowiedź </a>
+						<p> Żółte na niebieskim. </p>
 					</div>
 					<form class='question'>
 						<input type="text" placeholder="Wpisz odpowiedź" 
@@ -96,7 +97,7 @@
 				</div>
 
 				<div  class='step' id='badyl'>
-					<h1 class="feature-title">Wpisz hasło, które przyniosły Ci koty</h2>
+					<h1 class="feature-title">Wpisz hasło, które przyniosły Ci koty</h1>
 					<div class='hint'>
 						<a> Kolejność nie jest chronologiczna </a>
 						<p> </p>
