--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 						Zapach niemły, sztachnąć się można <br />
 						Co najgorsze poza domem <br />
 						Nie otwieraj drzwi, celuj wysoko <br />
-						Niech jedzie, niech sunie <br />
+						Niech jedzie, a kot sie wysunie sunie <br />
 					</div>
 				</div>
 
