--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 						<input type="text" placeholder="Wpisz odpowiedź" 
 							data-answers='["grzesiek","szwagier"]'>
 						<input type="submit" value="Sprawdź!">
+						<p class='error'> 
+							Próbuj dalej. W Małopolsce nie ma zbyt wielu znajomych wrogów kotów, nie?
+						</p>
 					</form>
 
 					<div class='result'>
@@ -48,6 +51,9 @@
 					<form class='question'>
 						<input type="text" placeholder="Wpisz odpowiedź" data-answers='["leżeć"]'>
 						<input type="submit" value="Sprawdź!">
+						<p class='error'> 
+							Niestety nie. Ale wyobraź sobie kota, co on robi?
+						</p>
 					</form>
 
 					<div class='result'>
@@ -68,6 +74,9 @@
 						<input type="text" placeholder="Wpisz odpowiedź" 
 						data-answers='["anetka", "aneta", "niut", "niuta", "niutka"]'>
 						<input type="submit" value="Sprawdź!">
+						<p class='error'> 
+							Nie trafiłaś. Spróbuj jeszcze raz :).
+						</p>
 					</form>
 
 					<div class='result'>
@@ -86,6 +95,9 @@
 						<input type="text" placeholder="Wpisz odpowiedź" 
 							data-answers='["ikea", "z ikei", "ikei"]'>
 						<input type="submit" value="Sprawdź!">
+						<p class='error'> 
+							Niestety nie. A co ma żółte na niebieskim? Może klopsika?
+						</p>
 					</form>
 
 					<div class='result'>
@@ -99,13 +111,16 @@
 				<div  class='step' id='badyl'>
 					<h1 class="feature-title">Wpisz hasło, które przyniosły Ci koty</h1>
 					<div class='hint'>
-						<a> Kolejność nie jest chronologiczna </a>
-						<p> </p>
+						<a> Podpowiedź </a>
+						<p> Kolejność nie jest chronologiczna </p>
 					</div>
 					<form class='question'>
 						<input type="text" placeholder="Wpisz odpowiedź" 
 							data-answers='["gato"]'>
 						<input type="submit" value="Sprawdź!">
+						<p class='error'> 
+							Nie, spróbuj inaczej :).
+						</p>
 					</form>
 
 					<div class='result'>
