--- a/index.html
+++ b/index.html
@@ -124,8 +124,12 @@
 					</form>
 
 					<div class='result'>
-						A tam czeka ostatnia część prezentu:
-						<img class='figure' src='images/barek.jpg'></img>
+						<!-- A tam czeka ostatnia część prezentu:
+						<img class='figure' src='images/barek.jpg'></img> -->
+						Wbrew burzom, wbrew kurzom <br />
+						Pisarz z kraju żab i slimaków <br />
+						Dla higieny i dla szczęścia <br />
+						Każdy powinien mieć jego dzieła <br />
 					</div>
 				</div>
 
